--- a/alx_fe_javascript/index.html
+++ b/alx_fe_javascript/index.html
@@ -2,22 +2,15 @@
 <html lang="en">
 <head>
   <meta charset="UTF-8">
-  <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Quote Generator</title>
+  <title>Quote App</title>
   <link rel="stylesheet" href="styles.css">
 </head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
-
-  <div id="quoteDisplay"></div>
-
-  <button id="newQuote">Show New Quote</button>
-
-  <h2>Add a New Quote</h2>
-  <input type="text" id="newQuoteText" placeholder="Enter quote">
-  <input type="text" id="newQuoteCategory" placeholder="Enter category">
-  <button onclick="addQuote()">Add Quote</button>
-
+  <div id="quoteDisplay">Click the button to see a quote.</div>
+  <button id="newQuote">New Quote</button>
+  <button id="exportBtn">Export Quotes</button>
+  <input type="file" id="importFile" accept=".json">
+  
   <script src="script.js"></script>
 </body>
 </html>
