--- a/alx_fe_javascript/dom-manipulation/index.html
+++ b/alx_fe_javascript/dom-manipulation/index.html
@@ -3,25 +3,19 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator</title>
+  <title>Quotes App</title>
 </head>
 <body>
-  <h1>Dynamic Quote Generator</h1>
-  
-  <!-- Quote Display -->
-  <div id="quoteDisplay" style="margin-bottom: 20px; font-size: 1.2em; font-weight: bold;"></div>
-  
-  <!-- Show New Quote Button -->
+  <h1>Random Quotes</h1>
+
+  <div id="quoteDisplay">Click the button to see a quote!</div>
   <button id="newQuote">Show New Quote</button>
-  
-  <!-- Add Quote Form -->
-  <div style="margin-top: 20px;">
-    <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
-    <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button id="addQuote">Add Quote</button>
-  </div>
-  
+
+  <h2>Add a New Quote</h2>
+  <input id="newQuoteText" type="text" placeholder="Quote text" />
+  <input id="newQuoteCategory" type="text" placeholder="Category" />
+  <button id="addQuote">Add Quote</button>
+
   <script src="script.js"></script>
 </body>
 </html>
-
