Implement web storage and JSON import/export

--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator with Storage</title>
+  <title>Dynamic Quote Generator with Web Storage</title>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
@@ -11,18 +11,15 @@
   <div id="quoteDisplay"></div>
   <button id="newQuote">Show New Quote</button>
 
-  <!-- Form for adding new quotes -->
   <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button id="addQuoteBtn">Add Quote</button>
+    <button onclick="addQuote()">Add Quote</button>
   </div>
 
-  <!-- JSON import/export controls -->
-  <div>
-    <button id="exportQuotes">Export Quotes</button>
-    <input type="file" id="importFile" accept=".json" />
-  </div>
+  <!-- Export/Import JSON -->
+  <button id="exportQuotes" onclick="exportToJsonFile()">Export Quotes</button>
+  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
 
   <script src="script.js"></script>
 </body>
