--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -3,11 +3,10 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Dynamic Quote Generator with Web Storage</title>
+  <title>Dynamic Quote Generator</title>
 </head>
 <body>
   <h1>Dynamic Quote Generator</h1>
-
   <div id="quoteDisplay"></div>
   <button id="newQuote">Show New Quote</button>
 
@@ -17,9 +16,10 @@
     <button onclick="addQuote()">Add Quote</button>
   </div>
 
-  <!-- Export/Import JSON -->
-  <button id="exportQuotes" onclick="exportToJsonFile()">Export Quotes</button>
-  <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  <div>
+    <button id="exportQuotesBtn">Export Quotes</button>
+    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+  </div>
 
   <script src="script.js"></script>
 </body>
