--- a/dom-manipulation/index.html
+++ b/dom-manipulation/index.html
@@ -13,12 +13,12 @@
   <div>
     <input id="newQuoteText" type="text" placeholder="Enter a new quote" />
     <input id="newQuoteCategory" type="text" placeholder="Enter quote category" />
-    <button onclick="addQuote()">Add Quote</button>
+    <button id="addQuoteBtn">Add Quote</button>
   </div>
 
   <div>
     <button id="exportQuotesBtn">Export Quotes</button>
-    <input type="file" id="importFile" accept=".json" onchange="importFromJsonFile(event)" />
+    <input type="file" id="importFile" accept=".json" />
   </div>
 
   <script src="script.js"></script>
